force-app/main/default/objects/OfferCreationStage__c/OfferCreationStage__c.object-meta.xml
<CustomObject>
    <label>OfferCreationStage</label>
    <nameField>
        <label>OfferCreationStage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OfferCreationStage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>