force-app/main/default/objects/OfferCreationStage__c/fields/DataFine__c.field-meta.xml
<CustomField>
    <fullName>DataFine__c</fullName>
    <label>DataFine</label>
    <type>Date</type>
</CustomField>