force-app/main/default/objects/OfferCreationStage__c/fields/DataInizio__c.field-meta.xml
<CustomField>
    <fullName>DataInizio__c</fullName>
    <label>DataInizio</label>
    <type>Date</type>
</CustomField>