force-app/main/default/objects/OfferCreationStage__c/fields/DescrizioneSAP__c.field-meta.xml
<CustomField>
    <fullName>DescrizioneSAP__c</fullName>
    <label>DescrizioneSAP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>