force-app/main/default/objects/OfferCreationStage__c/fields/Famiglia_Offerta__c.field-meta.xml
<CustomField>
    <fullName>Famiglia_Offerta__c</fullName>
    <label>Famiglia Offerta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>