force-app/main/default/objects/OfferCreationStage__c/fields/Mercato_Riferimento__c.field-meta.xml
<CustomField>
    <fullName>Mercato_Riferimento__c</fullName>
    <label>Mercato Riferimento</label>
    <length>10</length>
    <type>Text</type>
</CustomField>