force-app/main/default/objects/OfferCreationStage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ErrorOnClone__c</columns>
    <columns>ErrorMessageOnClone__c</columns>
    <columns>Cloned__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>