force-app/main/default/objects/OfferCreationStage__c/listViews/Errori.listView-meta.xml
<ListView>
    <fullName>Errori</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Cloned__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ErrorOnClone__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Errori</label>
</ListView>