force-app/main/default/objects/OfferCreationStage__c/listViews/In_coda.listView-meta.xml
<ListView>
    <fullName>In_coda</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Cloned__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>In coda</label>
</ListView>